--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,5 @@ bytemuck = "1.14"
 bytemuck_derive = "1.6"
 env_logger = "0.11"
 pollster = "0.3"
+web-time = "0.2"
+tokio = { version = "1", features = ["full"] }
